--- a/OnlinerPropertySale/templates/contact.html
+++ b/OnlinerPropertySale/templates/contact.html
@@ -46,8 +46,8 @@
 							<a href="https://in.linkedin.com/"><i class="fa fa-linkedin"></i></a>
 						</div>
 						<div class="user-panel">
-							<a href="/registration/"><i class="fa fa-user-circle-o"></i> Register</a>
-							<a href="/login/"><i class="fa fa-sign-in"></i> Login</a>
+							<a href="/registration/?type=register"><i class="fa fa-user-circle-o"></i> Register</a>
+							<a href="/login/?type=login"><i class="fa fa-sign-in"></i> Login</a>
 						</div>
 					</div>
 				</div>
