--- a/OnlinerPropertySale/templates/about.html
+++ b/OnlinerPropertySale/templates/about.html
@@ -45,8 +45,8 @@
 							<a href="https://en-gb.facebook.com/login/"><i class="fa fa-facebook"></i></a>
 						</div>
 						<div class="user-panel">
-							<a href="/registration/"><i class="fa fa-user-circle-o"></i> Register</a>
-							<a href="/login/"><i class="fa fa-sign-in"></i> Login</a>
+							<a href="/registration/?type=register"><i class="fa fa-user-circle-o"></i> Register</a>
+							<a href="/login/?type=login"><i class="fa fa-sign-in"></i> Login</a>
 						</div>
 					</div>
 				</div>
@@ -134,11 +134,11 @@
 							<li><a href="">Chicago</a></li>
 						</ul>
 						<ul>
-							<li><a href="">St Louis</a></li>
-							<li><a href="">Jacksonville</a></li>
-							<li><a href="">San Jose</a></li>
-							<li><a href="">San Diego</a></li>
-							<li><a href="">Houston</a></li>
+							<li><a href="">Amaravathi</a></li>
+							<li><a href="">Guntur</a></li>
+							<li><a href="">Vijayawada</a></li>
+							<li><a href="">Kurnool</a></li>
+							<li><a href="">Tirupati</a></li>
 						</ul>
 					</div>
 				</div>
