--- a/OnlinerPropertySale/templates/sales.html
+++ b/OnlinerPropertySale/templates/sales.html
@@ -1,13 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Sales Page</title>
+    {% load staticfiles %}
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}"/>
+	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css'%}"/>
+	<link rel="stylesheet" href="{% static 'css/animate.css'%}"/>
+	<link rel="stylesheet" href="{% static 'css/owl.carousel.css'%}"/>
+	<link rel="stylesheet" href="{% static 'css/style.css'%}"/>
+
+
+	<!--[if lt IE 9]>
+	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
 </head>
 <body>
-<form action="/sales/" method="post">
-    {% csrf_token %}
-</form>
+	<!-- Page Preloder -->
+	<div id="preloder">
+		<div class="loader"></div>
+	</div>
+
+	<!-- Header section -->
+	<header class="header-section">
+		<div class="header-top">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6 header-top-left">
+						<div class="top-info">
+							<i class="fa fa-phone"></i>
+							(+91) 9666454558
+						</div>
+						<div class="top-info">
+							<i class="fa fa-envelope"></i>
+							info.maheshguthi@gmail.com
+						</div>
+					</div>
+					<div class="col-lg-6 text-lg-right header-top-right">
+						<div class="top-social">
+							<a href="https://en-gb.facebook.com/login/"><i class="fa fa-facebook"></i></a>
+							<a href="https://in.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+						</div>
+						<div class="user-panel">
+							<a href="/registration/?type=register"><i class="fa fa-user-circle-o"></i> Register</a>
+							<a href="/login/?type=login"><i class="fa fa-sign-in"></i> Login</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="site-navbar">
+						<div class="nav-switch">
+							<i class="fa fa-bars"></i>
+						</div>
+						<ul class="main-menu">
+							<li><a href="/homepage/">Home</a></li>
+							<li><a href="/about/">ABOUT US</a></li>
+							<li><a href="/openadmin/">ADMIN</a></li>
+							<li><a href="/sales/">SALES</a></li>
+							<li><a href="/contact/">Contact</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!-- Header section end -->
+	<!-- Page top section -->
+	<section class="page-top-section set-bg" data-setbg="{% static 'img/page-top-bg.jpg'%}">
+	</section>
+	<!--  Page top end -->
+    <table>
+        <tr>
+            <td><img src="{% static 'sales/one.jpg.jpg' %}" width="500" height="400"></td>
+</td>
+            <td>        <td>        <img src="{% static 'sales/two.jpg.jpg' %}">
+        </tr>
+        <tr><td>Information</td><td>Information</td></tr>
+        <tr><td>Place:Hyderabad,Kukatpally</td></tr>
+        <tr><td>Price:50 Lakhs</td></tr>
+    </table>
+    <tr>
+    <td><img src="{% static 'sales/three.jpg.jpg' %}"></td>
+</td>
+    </tr>
+
+    <tr>
+    </tr>
+    <img src="{% static 'sales/three.jpg.jpg' %}">
+    <img src="{% static 'sales/four.jpg.jpg' %}">
+    <img src="{% static 'sales/five.jpg.jpg' %}">
+    <img src="{% static 'sales/six.jpg.jpg' %}">
+
+	<!-- Footer section -->
+	<footer class="footer-section set-bg"  data-setbg="{% static 'img/footer-bg.jpg'%}">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3 col-md-6 footer-widget">
+                    MAHESH
+				</div>
+				<div class="col-lg-3 col-md-6 footer-widget">
+					<div class="contact-widget">
+						<h5 class="fw-title">CONTACT US</h5>
+						<p><i class="fa fa-map-marker"></i>1-77/1/A/1, Hyderabad,Telangana</p>
+						<p><i class="fa fa-phone"></i>(+91) 9666454558</p>
+						<p><i class="fa fa-envelope"></i>info.maheshguthi@gmail.com</p>
+						<p><i class="fa fa-clock-o"></i>Mon - Sat, 08 AM - 06 PM</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 footer-widget">
+					<div class="double-menu-widget">
+						<h5 class="fw-title">POPULAR PLACES</h5>
+						<ul>
+							<li><a href="">Hyderabad</a></li>
+							<li><a href="">Ranga Reddy</a></li>
+							<li><a href="">Warangal</a></li>
+							<li><a href="">Karimnagar</a></li>
+							<li><a href="">Adilabad</a></li>
+						</ul>
+						<ul>
+							<li><a href="">Amaravathi</a></li>
+							<li><a href="">Guntur</a></li>
+							<li><a href="">Vijayawada</a></li>
+							<li><a href="">Kurnool</a></li>
+							<li><a href="">Tirupati</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6  footer-widget">
+					<div class="newslatter-widget">
+						<h5 class="fw-title">NEWSLETTER</h5>
+						<p>Subscribe your email to get the latest news and new offer also discount</p>
+						<form class="footer-newslatter-form">
+							<input type="text" placeholder="Email address">
+							<button><i class="fa fa-send"></i></button>
+						</form>
+					</div>
+				</div>
+			</div>
+
+	<!--====== Javascripts & Jquery ======-->
+	<script src="{% static 'js/jquery-3.2.1.min.js'%}"></script>
+	<script src="{% static 'js/bootstrap.min.js'%}"></script>
+	<script src="{% static 'js/owl.carousel.min.js'%}"></script>
+	<script src="{% static 'js/masonry.pkgd.min.js'%}"></script>
+	<script src="{% static 'js/magnific-popup.min.js'%}"></script>
+	<script src="{% static 'js/main.js'%}"></script>
+
+	<!-- load for map -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YyDTa0qqOjIerob2VTIwo_XVMhrruxo"></script>
+	<script src="js/map.js"></script>
+
 
 </body>
 </html>
